--- a/fazit.tex
+++ b/fazit.tex
@@ -1,1 +1,6 @@
 \chapter{Fazit}
+
+Die qualitativen Anforderungen der Modularität und Erweiterbarkeit an Architektur und Programmeigenschaften werden mit Hilfe einer überaus flexiblen Anwendungsstruktur umgesetzt, die eine Erweiterung an den entscheidenden Stellen zulässt. So ist sowohl eine statische Erweiterung durch Module und Werkzeuge, als auch eine dynamische durch Plug-ins in zwei- und dreidimensionalem Raum möglich.\\
+Die Funktionalen Anforderungen an die Software decken im Besonderen die Anzeige und Manipulation der Bilder sowie die dynamische Parameterübergabe ab. Die Bildanzeige kann zur Navigation und Orientierung im 3D-Datensatz verwendet werden und bietet typische Operationen wie die Translation und die Skalierung. Mit Hilfe der Selektionswerkzeuge können zusätzlich für den Anwender wichtige Bereiche markiert und in Plug-ins interpretiert werden.\\
+JMediKit setzt die Anforderungen an die Software und deren Architektur um und liefert eine solide Grundlage für zukünftige Erweiterungen. Denkbar wäre eine Anbindung an das Picture Archiving and Commnication System des Labors, um medizinische Bilder direkt aus dem Netzwerk beziehen zu können. Zusätzlich könnte ein 3D-Renderer integriert werden, der eine dreidimensionale Darstellung des Voxelraums bietet.
+Das Java Medical Imaging Toolkit bietet dazu sowohl das Potential, als auch die Schnittstellen und stellt damit eine modulare und erweiterbare Anwendung zur medizinischen Bildverarbeitung dar.
